# luisdavidgarcia.github.io

./: .app.js.swp  .dockerignore  .gitignore  .gitmodules  .index.html.swn  .index.html.swo  .index.html.swp  .prettierrc  .styles.css.swo  .styles.css.swp  Dockerfile  Makefile  README.md  app.js  archives.html  arm-system-developers-guide.html  asset-manifest.json  authors.html  better-embedded-systems-key-takeaways.html  c-best-practices.html  c-concurrency-in-action-key-takeaways.html  categories.html  compose.yml  computer-organization-and-design-risc-v-key-takeaways.html  docker-compose.yml  index.html  index2.html  misra-c-2012.html  misra-c2023.html  operating-systems-three-easy-pieces-key-takeaways.html  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  soft-skills-key-takeaways.html  styles.css  tags.html  test-driven-development-for-embedded-c.html  (+3 more)
.devcontainer/: devcontainer.json
.github/: dependabot.yml
author/: luis-david-garcia.html  luis-david-garcia2.html
category/: books.html  books2.html
docs/: accessingContainersOnBrowser.md
feeds/: all.atom.xml
luis-resume/: package-lock.json  package.json
output/: archives.html  authors.html  categories.html  index.html  tags.html
pages/: .electronics.html.swp  InsertURL.py  electronics.html  security.html  software.html
src/: .app.js.swp  .styles.css.swp  App.js  app.js  index.js  infoform.js  styles.css
tag/: arm.html  clean-code.html  coding-standards.html  computer-architecture.html  concurrency.html  cpp.html  efficiency.html  embedded-c.html  (+17 more)
(+107 files in other folders)
