[project]
name = "luisdavidgarcia-github-io"
version = "0.1.0"
description = "My Personal Career and Journey Blog"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ghp-import>=2.1.0",
    "markdown>=3.10.2",
    "pelican[markdown]>=4.12.0",
    "pygments>=2.19.2",
    "typogrify>=2.1.0",
]
